[gd_scene load_steps=79 format=3 uid="uid://cxou84lmsfkqs"]

[ext_resource type="Texture2D" uid="uid://cgn5qdlw86frn" path="res://ani_png/tex_1 (2).png" id="1"]
[ext_resource type="Script" path="res://spite/player/spite_1.gd" id="2"]
[ext_resource type="Script" path="res://spite/sprite_class/sp_state_machine.gd" id="2_wtqut"]
[ext_resource type="Shader" uid="uid://dglk3s7kp3il" path="res://spite/player/gun_line.tres" id="3_w6a71"]
[ext_resource type="Script" path="res://spite/player/p_idle.gd" id="4"]
[ext_resource type="Script" path="res://spite/player/p_walk.gd" id="5"]
[ext_resource type="Script" path="res://spite/player/p_ready_weapen.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://c83djiy88mfjr" path="res://spite/player/light.png" id="8_gay6b"]
[ext_resource type="Script" path="res://spite/player/aim_ray.gd" id="8_m0cbn"]
[ext_resource type="Script" path="res://spite/player/gun_light.gd" id="11_n2wls"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3pgi5"]
shader = ExtResource("3_w6a71")

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(22, 28)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n56v7"]
animation = &"idle_walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xpxhl"]
animation = &"idle_walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7esgf"]
animation = &"idle_walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtu3a"]
animation = &"idle_walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_blsv6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n56v7")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_xpxhl")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7esgf")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_mtu3a")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f7nfm"]
animation = &"idle_weapon_r_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kmedd"]
animation = &"idle_weapon_r_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kf5bt"]
animation = &"idle_weapon_r_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtfoc"]
animation = &"idle_weapon_r_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_if5ac"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f7nfm")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_kmedd")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_kf5bt")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_mtfoc")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tnnp4"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sif1d"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h8xl0"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_amkjs"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dlkty"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tnnp4")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_sif1d")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_h8xl0")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_amkjs")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pmxpa"]
animation = &"walk_weapon_w_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p81yk"]
animation = &"walk_weapon_w_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f5mww"]
animation = &"walk_weapon_w_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u8squ"]
animation = &"walk_weapon_w_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_f5u0g"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pmxpa")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p81yk")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_f5mww")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_u8squ")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_finsp"]
animation = &"walk_weapon_w_down"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xx18w"]
animation = &"walk_weapon_w_up"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yly5o"]
animation = &"walk_weapon_w_left"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ndjd3"]
animation = &"walk_weapon_w_right"
play_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_cs3xj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_finsp")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_xx18w")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yly5o")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ndjd3")
blend_point_3/pos = Vector2(0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f5d3q"]
animation = &"walk_weapon_r_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ym2ss"]
animation = &"walk_weapon_r_up "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yp87g"]
animation = &"walk_weapon_r_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cbitn"]
animation = &"walk_weapon_r_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uosp0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f5d3q")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ym2ss")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yp87g")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_cbitn")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yfkgc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_24q0h"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5o53t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lf1om"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8kakv"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2irco"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3wqky"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7v7qd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bghoe"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_j4d44"]
states/End/position = Vector2(912, 87)
states/Start/position = Vector2(513, 297)
states/idle_walk/node = SubResource("AnimationNodeBlendSpace2D_blsv6")
states/idle_walk/position = Vector2(513, 185)
states/idle_weapon/node = SubResource("AnimationNodeBlendSpace2D_if5ac")
states/idle_weapon/position = Vector2(264, 185)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_dlkty")
states/walk/position = Vector2(692, 185)
states/walk_weapon/node = SubResource("AnimationNodeBlendSpace2D_f5u0g")
states/walk_weapon/position = Vector2(264, 273)
states/walk_weapon_back/node = SubResource("AnimationNodeBlendSpace2D_cs3xj")
states/walk_weapon_back/position = Vector2(264, 360)
states/weapon_r/node = SubResource("AnimationNodeBlendSpace2D_uosp0")
states/weapon_r/position = Vector2(264, 79)
transitions = ["idle_walk", "walk", SubResource("AnimationNodeStateMachineTransition_yfkgc"), "walk", "idle_walk", SubResource("AnimationNodeStateMachineTransition_24q0h"), "Start", "idle_walk", SubResource("AnimationNodeStateMachineTransition_5o53t"), "idle_walk", "weapon_r", SubResource("AnimationNodeStateMachineTransition_lf1om"), "weapon_r", "idle_weapon", SubResource("AnimationNodeStateMachineTransition_8kakv"), "idle_weapon", "walk_weapon", SubResource("AnimationNodeStateMachineTransition_2irco"), "walk_weapon", "idle_weapon", SubResource("AnimationNodeStateMachineTransition_3wqky"), "walk_weapon_back", "walk_weapon", SubResource("AnimationNodeStateMachineTransition_7v7qd"), "walk_weapon", "walk_weapon_back", SubResource("AnimationNodeStateMachineTransition_bghoe")]
graph_offset = Vector2(0, 18.291)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_fknd3"]
graph_offset = Vector2(-370.474, 67.9595)
nodes/output/position = Vector2(381, 103)
nodes/sp_action/node = SubResource("AnimationNodeStateMachine_j4d44")
nodes/sp_action/position = Vector2(-160, 120)
node_connections = [&"output", 0, &"sp_action"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_6366p"]

[sub_resource type="Animation" id="Animation_r6cjf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(6, 16, 32, 48)]
}

[sub_resource type="Animation" id="Animation_7tvui"]
resource_name = "idle_walk_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(54, 14, 32, 48)]
}

[sub_resource type="Animation" id="Animation_0dord"]
resource_name = "idle_walk_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(58, 78, 22, 48)]
}

[sub_resource type="Animation" id="Animation_le02r"]
resource_name = "idle_walk_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(60, 142, 22, 48)]
}

[sub_resource type="Animation" id="Animation_lt8cf"]
resource_name = "idle_walk_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(54, 206, 32, 48)]
}

[sub_resource type="Animation" id="Animation_s50tk"]
resource_name = "idle_weapon_r_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(346, 526, 33, 48)]
}

[sub_resource type="Animation" id="Animation_qolnu"]
resource_name = "idle_weapon_r_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(384, 592, 35, 48)]
}

[sub_resource type="Animation" id="Animation_ras2d"]
resource_name = "idle_weapon_r_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(398, 656, 34, 46)]
}

[sub_resource type="Animation" id="Animation_o6aix"]
resource_name = "idle_weapon_r_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(393, 721, 32, 48)]
}

[sub_resource type="Animation" id="Animation_75kta"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(54, 14, 32, 50), Rect2(6, 16, 32, 48), Rect2(102, 16, 32, 48)]
}

[sub_resource type="Animation" id="Animation_eaaoe"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(58, 78, 22, 48), Rect2(10, 80, 22, 46), Rect2(106, 80, 22, 46)]
}

[sub_resource type="Animation" id="Animation_ty8xk"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(60, 142, 22, 48), Rect2(12, 144, 22, 46), Rect2(108, 144, 22, 46)]
}

[sub_resource type="Animation" id="Animation_f0mi8"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(54, 206, 32, 50), Rect2(6, 208, 32, 48), Rect2(102, 208, 32, 48)]
}

[sub_resource type="Animation" id="Animation_2vihd"]
resource_name = "walk_weapon_fire_right "
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(398, 656, 34, 46), Rect2(350, 654, 34, 48)]
}

[sub_resource type="Animation" id="Animation_3c7ie"]
resource_name = "walk_weapon_r_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(57, 526, 33, 48), Rect2(201, 526, 33, 50), Rect2(298, 528, 33, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../player_state_machine/p_ready_weapon:flag_gun_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aab6u"]
resource_name = "walk_weapon_r_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(109, 592, 23, 46), Rect2(201, 590, 27, 48), Rect2(336, 590, 35, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../player_state_machine/p_ready_weapon:flag_gun_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_78o0j"]
resource_name = "walk_weapon_r_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(111, 656, 23, 46), Rect2(255, 654, 27, 48), Rect2(350, 654, 34, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../player_state_machine/p_ready_weapon:flag_gun_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5p7of"]
resource_name = "walk_weapon_r_up "
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(57, 719, 32, 50), Rect2(153, 719, 32, 48), Rect2(249, 719, 32, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../player_state_machine/p_ready_weapon:flag_gun_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i0lmw"]
resource_name = "walk_weapon_w_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(346, 526, 33, 50), Rect2(298, 528, 33, 48), Rect2(394, 528, 33, 48)]
}

[sub_resource type="Animation" id="Animation_x40qu"]
resource_name = "walk_weapon_w_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(336, 590, 35, 48), Rect2(288, 592, 35, 46), Rect2(384, 592, 35, 46)]
}

[sub_resource type="Animation" id="Animation_0ures"]
resource_name = "walk_weapon_w_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(350, 654, 34, 48), Rect2(302, 656, 34, 46), Rect2(398, 656, 34, 46)]
}

[sub_resource type="Animation" id="Animation_s1i4e"]
resource_name = "walk_weapon_w_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(345, 719, 32, 48), Rect2(297, 721, 32, 50), Rect2(393, 721, 32, 48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mkcw"]
_data = {
"RESET": SubResource("Animation_r6cjf"),
"idle_walk_down": SubResource("Animation_7tvui"),
"idle_walk_left": SubResource("Animation_0dord"),
"idle_walk_right": SubResource("Animation_le02r"),
"idle_walk_up": SubResource("Animation_lt8cf"),
"idle_weapon_r_down": SubResource("Animation_s50tk"),
"idle_weapon_r_left": SubResource("Animation_qolnu"),
"idle_weapon_r_right": SubResource("Animation_ras2d"),
"idle_weapon_r_up": SubResource("Animation_o6aix"),
"walk_down": SubResource("Animation_75kta"),
"walk_left": SubResource("Animation_eaaoe"),
"walk_right": SubResource("Animation_ty8xk"),
"walk_up": SubResource("Animation_f0mi8"),
"walk_weapon_fire_right ": SubResource("Animation_2vihd"),
"walk_weapon_r_down": SubResource("Animation_3c7ie"),
"walk_weapon_r_left": SubResource("Animation_aab6u"),
"walk_weapon_r_right": SubResource("Animation_78o0j"),
"walk_weapon_r_up ": SubResource("Animation_5p7of"),
"walk_weapon_w_down": SubResource("Animation_i0lmw"),
"walk_weapon_w_left": SubResource("Animation_x40qu"),
"walk_weapon_w_right": SubResource("Animation_0ures"),
"walk_weapon_w_up": SubResource("Animation_s1i4e")
}

[sub_resource type="OccluderPolygon2D" id="38"]
cull_mode = 2
polygon = PackedVector2Array(-10, 30, 5, 30, -2, 26)

[node name="player_node" type="CharacterBody2D"]
collision_mask = 15
platform_on_leave = 2
script = ExtResource("2")

[node name="aim_ray" type="RayCast2D" parent="."]
visible = false
light_mask = 4
collision_mask = 14
script = ExtResource("8_m0cbn")
speed_view = 0.007

[node name="gun_ray" type="Line2D" parent="aim_ray"]
show_behind_parent = true
light_mask = 0
material = SubResource("ShaderMaterial_3pgi5")
points = PackedVector2Array(0, 0, 400, 0)
width = 1.0
default_color = Color(1, 0.0431373, 0.0470588, 1)
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 4.0
round_precision = 2

[node name="player_state_machine" type="Node" parent="."]
script = ExtResource("2_wtqut")
start_state = "p_walk"

[node name="p_idle" type="Node" parent="player_state_machine"]
script = ExtResource("4")

[node name="p_walk" type="Node" parent="player_state_machine"]
script = ExtResource("5")
walk_speed = 120

[node name="p_ready_weapon" type="Node" parent="player_state_machine"]
script = ExtResource("6")

[node name="player_item_machine" type="Node" parent="."]

[node name="Sprite2d" type="Sprite2D" parent="."]
scale = Vector2(1.00533, 1)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(6, 16, 32, 48)
metadata/_edit_lock_ = true

[node name="Collision_player" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("1")
metadata/_edit_lock_ = true

[node name="ani_player_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_fknd3")
anim_player = NodePath("player_animation")
active = true
parameters/sp_action/playback = SubResource("AnimationNodeStateMachinePlayback_6366p")
parameters/sp_action/idle_walk/blend_position = Vector2(0, 0)
parameters/sp_action/idle_weapon/blend_position = Vector2(-0.687676, -0.00892854)
parameters/sp_action/walk/blend_position = Vector2(0.510818, -0.151786)
parameters/sp_action/walk_weapon/blend_position = Vector2(-0.793039, 0)
parameters/sp_action/walk_weapon_back/blend_position = Vector2(-0.79492, 0.00892854)
parameters/sp_action/weapon_r/blend_position = Vector2(-0.70461, -0.0267857)

[node name="player_animation" type="AnimationPlayer" parent="ani_player_tree"]
root_node = NodePath("../../Sprite2d")
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_1mkcw")
}

[node name="camera" type="Camera2D" parent="."]
ignore_rotation = false
current = true
process_callback = 0
drag_left_margin = 0.5
drag_top_margin = 0.5
editor_draw_drag_margin = true
metadata/_edit_lock_ = true

[node name="gun_light" type="PointLight2D" parent="."]
light_mask = 0
position = Vector2(4, 3)
enabled = false
energy = 2.0
blend_mode = 2
range_item_cull_mask = 15
shadow_enabled = true
shadow_item_cull_mask = 4
texture = ExtResource("8_gay6b")
offset = Vector2(290, 0)
script = ExtResource("11_n2wls")
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(2, -10)
occluder = SubResource("38")
metadata/_edit_lock_ = true
